tests/compile-fail/integration_suite__integration__general__recursive_const.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: cycle in const definition
   ┌─ <input>:19:19
   │
19 │         const int UH_OH = UMMMM;
   │                   ^^^^^ cyclic const
20 │         const int UMMMM = HALP;
21 │         const int HALP = UH_OH;
   │                          ----- depends on its own value here


